# oc-images

./: Makefile  README.md  pyproject.toml
src/oc_images/: cli.py  comparer.py  image.py  imagecollection.py  util.py
tests/: payload_data.json  test_cli.py  test_imagecollection.py
